native-builtins: --enable-native-access gate + Panama host-call audit (HIGH security)
Replace the coarse process-wide AtomicBool gate in native-builtins/src/panama.rs
with a `PanamaAccessRegistry` that tracks per-module native-access grants. Wire
every Panama entry point that crosses into native code through the registry:
DowncallHandle.invoke/invokeExact, Linker.upcallHandle,
SymbolLookup.libraryLookup/loaderLookup/find. Modules without a grant get an
IllegalStateException whose message starts with "IllegalCallerException:"
(dedicated error variant pending in cratonvm-types).

Audit the Panama-side host-call sites: SymbolLookup.libraryLookup now consults
the installed SecurityManager via checkLink (mirroring the ProcessBuilder.start
checkExec pattern from #4) before mapping a shared library, and rejects empty
paths or embedded NUL bytes outright.

The unnamed module gets a one-shot stderr warning today and proceeds — matching
the OpenJDK 21 transition behavior. CONFIG.md documents the flag, the
ALL-UNNAMED semantics, the accumulation rule, and the future deny-by-default
flip. The launcher will populate the registry via
`panama_access_registry().enable_modules_csv(...)` once the flag-parsing PR
lands; that's a vm/ change deferred from this commit's scope.

Tests:
- Caller in unnamed module with warn-mode off + no flag -> IllegalCallerException
- Listed module passes the gate (alignment check is what fails next)
- Multiple `--enable-native-access` flags accumulate (idempotent on duplicates,
  whitespace/empty entries tolerated)
- Unnamed-module warn-mode permits with a single warning per process
- ALL-UNNAMED grants the unnamed module and every named module (JDK wildcard)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>